// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> appearance snapshot 1`] = `
<div
  className="css-1f4h84s css-nil ub-bs_17bru36 ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_15px ub-pl_15px ub-pr_15px ub-pt_15px ub-bg-clr_white ub-color_234361 ub-bblr_3px ub-bbrr_3px ub-btlr_3px ub-btrr_3px ub-box-szg_border-box"
  role="alert"
>
  <div
    className="css-nil ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-1qmfd78 ub-w_16px ub-h_16px ub-box-szg_border-box"
      data-icon="info-sign"
      viewBox="0 0 16 16"
    >
      <path
        d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="css-nil ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_0px ub-mb_0px ub-color_inherit ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      Test title
    </h4>
    <div
      className="css-nil ub-box-szg_border-box"
    />
  </div>
</div>
`;

exports[`<Alert /> basic snapshot 1`] = `
<div
  className="css-1f4h84s css-nil ub-bs_dn7fs ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_15px ub-pl_15px ub-pr_15px ub-pt_15px ub-bg-clr_white ub-color_234361 ub-box-szg_border-box"
  role="alert"
>
  <div
    className="css-nil ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-1qmfd78 ub-w_16px ub-h_16px ub-box-szg_border-box"
      data-icon="info-sign"
      viewBox="0 0 16 16"
    >
      <path
        d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="css-nil ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_0px ub-mb_0px ub-color_inherit ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      A simple general message
    </h4>
    <div
      className="css-nil ub-box-szg_border-box"
    />
  </div>
</div>
`;

exports[`<Alert /> intent snapshot 1`] = `
<div
  className="css-qomzub css-nil ub-bs_dn7fs ub-pst_relative ub-ovflw-x_hidden ub-ovflw-y_hidden ub-dspl_flex ub-pb_15px ub-pl_15px ub-pr_15px ub-pt_15px ub-bg-clr_white ub-color_234361 ub-box-szg_border-box"
  role="alert"
>
  <div
    className="css-nil ub-mr_16px ub-ml_2px ub-mt_-1px ub-dspl_flex ub-algn-itms_flex-start ub-box-szg_border-box"
  >
    <svg
      className="css-neu3kn ub-w_16px ub-h_16px ub-box-szg_border-box"
      data-icon="error"
      viewBox="0 0 16 16"
    >
      <path
        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="css-nil ub-flx_1 ub-box-szg_border-box"
  >
    <h4
      className="ub-mt_0px ub-mb_0px ub-color_inherit ub-fnt-fam_b77syt ub-f-wght_500 ub-fnt-sze_14px ub-ln-ht_1 ub-ltr-spc_-0-05px ub-box-szg_border-box"
    >
      Test title
    </h4>
    <div
      className="css-nil ub-box-szg_border-box"
    />
  </div>
</div>
`;
